test/negative/feature_interfaceconstants.java

interface feature_interfaceconstants {
  static final int x = 42;
}

